--- a/react菜鸟/helloworld.html
+++ b/react菜鸟/helloworld.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div id="example">
+      
+    </div>
     <script src="https://cdn.bootcss.com/react/15.4.2/react.min.js"></script>
     <script src="https://cdn.bootcss.com/react/15.4.2/react-dom.min.js"></script>
     <script src="https://cdn.bootcss.com/babel-standalone/6.22.1/babel.min.js"></script>
@@ -18,5 +21,6 @@
         <h1>Hello, world!</h1>,
         document.getElementById('example')
       );
+      </script>
 </body>
 </html>
